Deploy docker image

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start": "serve",
     "show": "echo ${npm_package_version}",
     "deploy": "run-s deploy:version:* deploy:latest:*",
-    "deploy:version:tag": "docker build -t mi6gan/seine:${npm_package_version} .",
-    "deploy:version:push": "docker push mi6gan/seine:${npm_package_version}",
-    "deploy:latest:tag": "docker tag mi6gan/seine:${npm_package_version} mi6gan:seine:latest",
-    "deploy:latest:push": "docker push mi6gan/seine:latest",
+    "deploy:build": "docker build -t mi6gan/seine:${npm_package_version} .",
+    "deploy:version": "docker push mi6gan/seine:${npm_package_version}",
+    "deploy:latest": "docker tag mi6gan/seine:${npm_package_version} mi6gan:seine:latest",
+    "deploy:push": "docker push mi6gan/seine:latest",
     "release": "run-s release:*",
     "release:publish": "node scripts/publish.js",
     "release:version": "yarn version --patch",
