--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "serve",
     "show": "echo ${npm_package_version}",
-    "deploy": "run-s deploy:version:* deploy:latest:*",
+    "deploy": "run-s deploy:*",
     "deploy:build": "docker build -t mi6gan/seine:${npm_package_version} .",
     "deploy:version": "docker push mi6gan/seine:${npm_package_version}",
     "deploy:latest": "docker tag mi6gan/seine:${npm_package_version} mi6gan:seine:latest",
