--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seine",
   "description": "Seine is a Javascript library of React components and utilities to view and edit structured content.",
-  "homepage": "https://redchiliorg.github.io/seine",
+  "homepage": "https://seine.wanttobe.online",
   "version": "0.0.22",
   "keywords": [
     "react",
