Deploy docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,9 @@
 **
+!dist
+!dist/*
+!dist/**/*
 !package.json
 !serve.json
 !yarn.lock
-!.browserslistrc
-!babel.config.js
-!.storybook/*.js
-!.storybook/*.css
-!packages/stories/*.js
-!packages/stories/*.css
-!packages/styles/src/bream/**
-!scripts/**
+!scripts
+!scripts/*.js
