--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ node_js: '12'
 services: docker
 cache: yarn
 before_install:
-- openssl aes-256-cbc -K $encrypted_930c6f160693_key -iv $encrypted_930c6f160693_iv
-  -in deploy.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
+- openssl aes-256-cbc -K $encrypted_930c6f160693_key -iv $encrypted_930c6f160693_iv -in deploy.enc -d | tar -xz -C ~
 before_deploy:
 - yarn config set version-commit-hooks false
 - yarn config set version-git-tag false
 - yarn config set version-sign-git-tag false
 - yarn global add npm-run-all
-- echo -e "machine github.com\n  login $CI_USER_LOGIN\n  password $CI_USER_PASSWORD" > ~/.netrc
-- echo -e "//registry.npmjs.org/:_authToken=$NPM_TOKEN\n @$NPM_LOGIN:registry=https://registry.npmjs.org/" > ~/.npmrc
+- echo -e "machine github.com\n  login $CI_USER_LOGIN\n  password $CI_USER_PASSWORD"
+  > ~/.netrc
+- echo -e "//registry.npmjs.org/:_authToken=$NPM_TOKEN\n @$NPM_LOGIN:registry=https://registry.npmjs.org/"
+  > ~/.npmrc
 - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
 deploy:
 - provider: script
@@ -27,7 +27,8 @@ deploy:
     branch: latest
 - provider: script
   skip_cleanup: true
-  script: ssh $DEPLOY_LOGIN@$DEPLOY_HOST 'docker-compose pull --parallel && docker-compose up -d'
+  script: ssh $DEPLOY_LOGIN@$DEPLOY_HOST 'docker-compose pull --parallel && docker-compose
+    up -d'
   on:
     branch: latest
 env:
