Set width of value labels in x axis with units set

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,5 +7,11 @@
       "*": ["packages/helpers/*"]
     }
   },
-  "exclude": ["node_modules", "lib"]
+  "exclude": [
+    "node_modules",
+    "lib",
+    "dist",
+    "packages/styles/src/bream/img",
+    "packages/styles/src/bream/styles/css"
+  ]
 }
