--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -15,9 +15,7 @@
     "@seine/core": "0.3",
     "@seine/styles": "0.3",
     "@seine/ui": "0.3",
-    "react-color": "^2.17.3",
-    "svg-patterns": "^1.0.0",
-    "virtual-dom-stringify": "^3.0.1"
+    "react-color": "^2.17.3"
   },
   "peerDependencies": {
     "@material-ui/core": "4.9",
