--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "minimist": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "pretty-ms": "^6.0.0",
     "ramda": "^0.26.1",
     "react-app-polyfill": "^1.0.2",
     "react-test-renderer": "^16.9.0",
@@ -91,7 +92,8 @@
     "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-visualizer": "^2.5.4"
+    "rollup-plugin-visualizer": "^2.5.4",
+    "turbocolor": "^2.6.1"
   },
   "workspaces": [
     "packages/*",
