--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
+    "colorette": "^1.1.0",
     "cross-env": "^6.0.3",
     "draft-js": "^0.11.0",
     "eslint": "^6.8.0",
@@ -92,8 +93,7 @@
     "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-visualizer": "^2.5.4",
-    "turbocolor": "^2.6.1"
+    "rollup-plugin-visualizer": "^2.5.4"
   },
   "workspaces": [
     "packages/*",
