--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/charts",
-  "version": "0.3.214",
+  "version": "0.3.215",
   "description": "Seine charts renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@seine/core": "0.3",
     "@seine/styles": "0.3",
+    "invert-color": "^2.0.0",
     "ramda": "^0.26.1"
   },
   "peerDependencies": {
