--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seine",
   "description": "Seine is a Javascript library of React components and utilities to view and edit structured content.",
   "homepage": "https://seine.wanttobe.online",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "keywords": [
     "react",
     "richtext"
@@ -28,8 +28,8 @@
     "test:jest": "jest",
     "build": "run-s build:*",
     "build:cjs": "node scripts/build.js --format=cjs",
-    "build:esm": "node scripts/build.js -format=esm",
-    "build:umd": "node scripts/build.js -format=umd",
+    "build:esm": "node scripts/build.js --format=esm",
+    "build:umd": "node scripts/build-workspace.js --format=umd --workspace=packages/testbox",
     "build:storybook": "yarn build-storybook --quiet --loglevel silent -o dist",
     "dev": "run-s dev:*",
     "dev:start": "start-storybook -p 3000"
@@ -72,7 +72,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
+    "find-cache-dir": "^3.3.0",
     "flow-bin": "^0.109.0",
+    "folder-hash": "^3.3.0",
     "glob": "^7.1.4",
     "history": "^4.10.1",
     "hooks.macro": "^1.0.1",
@@ -95,6 +97,7 @@
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-visualizer": "^2.5.4"
   },
   "workspaces": [
