Table content autofit

--- a/packages/tables/package.json
+++ b/packages/tables/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/tables",
-  "version": "0.3.232",
+  "version": "0.3.233",
   "description": "Seine tables renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -11,7 +11,8 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3"
+    "@seine/core": "0.3",
+    "@seine/styles": "0.3"
   },
   "peerDependencies": {
     "react": "^16.9.0",
